Add QgsWebEnginePage::render( QPainter* ) method
Requires a PDF4Qt enabled build. This method exports the QWebEnginePage
to a PDF file, so that we get nicely vectorised objects and
text-as-text. It's the ONLY supported way in Qt API to do this, every
other method of rendering QWebEnginePage forces rasterisation of
the content.

We then use the QgsPdfRenderer class to render the temporary PDF
content to a QPainter device, which keeps vector objects as vectors.

--- a/python/PyQt6/core/auto_generated/web/qgswebenginepage.sip.in
+++ b/python/PyQt6/core/auto_generated/web/qgswebenginepage.sip.in
@@ -64,6 +64,26 @@ Sets the ``url`` of the web page to be displayed.
 Setting this property clears the page and loads the URL.
 %End
 
+    bool render( QPainter *painter, const QRectF &painterRect ) throw( QgsNotSupportedException );
+%Docstring
+Renders the web page contents to a ``painter``. Content will be rendered as vector objects.
+
+The ``painterRect`` argument specifies the target rectangle for the page in ``painter`` coordinates.
+
+.. warning::
+
+   This method involves running the event loop on the current thread. Take care when calling from the main thread as incorrect use will result in crashes.
+
+.. warning::
+
+   This method requires a QGIS build with PDF4Qt library support.
+
+:return: ``True`` if rendering was successful
+
+
+:raises QgsNotSupportedException: on QGIS builds without PDF4Qt library support.
+%End
+
   signals:
 
     void loadStarted();
