--- a/python/PyQt6/3d/auto_generated/terrain/qgsmeshterrainsettings.sip.in
+++ b/python/PyQt6/3d/auto_generated/terrain/qgsmeshterrainsettings.sip.in
@@ -31,6 +31,21 @@ Terrain settings for a terrain generator that uses uses the Z values of a mesh l
     QString type() const final;
     void readXml( const QDomElement &element, const QgsReadWriteContext &context ) final;
     void writeXml( QDomElement &element, const QgsReadWriteContext &context ) const final;
+    void resolveReferences( const QgsProject *project ) final;
+
+    void setLayer( QgsMeshLayer *layer );
+%Docstring
+Sets the mesh ``layer`` with elevation model to be used for terrain generation.
+
+.. seealso:: :py:func:`layer`
+%End
+
+    QgsMeshLayer *layer() const;
+%Docstring
+Returns the mesh layer with elevation model to be used for terrain generation.
+
+.. seealso:: :py:func:`setLayer`
+%End
 
 };
 
