--- a/python/PyQt6/3d/auto_generated/terrain/qgsterrainsettings.sip.in
+++ b/python/PyQt6/3d/auto_generated/terrain/qgsterrainsettings.sip.in
@@ -89,7 +89,7 @@ Sets the vertical ``scale`` (exaggeration) for terrain.
 .. seealso:: :py:func:`verticalScale`
 %End
 
-    double terrainVerticalScale() const;
+    double verticalScale() const;
 %Docstring
 Returns the vertical scale (exaggeration) for terrain.
 
