--- a/python/3d/auto_generated/terrain/qgsdemterrainsettings.sip.in
+++ b/python/3d/auto_generated/terrain/qgsdemterrainsettings.sip.in
@@ -32,6 +32,7 @@ Terrain settings for a terrain generator that uses a raster DEM layer to build t
     void readXml( const QDomElement &element, const QgsReadWriteContext &context ) final;
     void writeXml( QDomElement &element, const QgsReadWriteContext &context ) const final;
     void resolveReferences( const QgsProject *project ) final;
+    bool equals( const QgsAbstractTerrainSettings *other ) const final;
 
     void setLayer( QgsRasterLayer *layer );
 %Docstring
