--- a/python/3d/auto_generated/terrain/qgsflatterrainsettings.sip.in
+++ b/python/3d/auto_generated/terrain/qgsflatterrainsettings.sip.in
@@ -31,7 +31,7 @@ Terrain settings for a simple flat area terrain.
     QString type() const final;
     void readXml( const QDomElement &element, const QgsReadWriteContext &context ) final;
     void writeXml( QDomElement &element, const QgsReadWriteContext &context ) const final;
-
+    bool equals( const QgsAbstractTerrainSettings *other ) const final;
 };
 
 
