--- a/python/PyQt6/3d/auto_generated/terrain/qgsterrainsettings.sip.in
+++ b/python/PyQt6/3d/auto_generated/terrain/qgsterrainsettings.sip.in
@@ -52,6 +52,11 @@ Returns a copy of the terrain settings.
 Returns the unique type name for the terrain generator.
 %End
 
+    virtual bool equals( const QgsAbstractTerrainSettings *other ) const = 0;
+%Docstring
+Returns ``True`` if this settings is exactly equal to another ``other`` settings.
+%End
+
     virtual void readXml( const QDomElement &element, const QgsReadWriteContext &context ) = 0;
 %Docstring
 Reads settings from a DOM ``element``.
