--- a/python/core/auto_generated/qgis.sip.in
+++ b/python/core/auto_generated/qgis.sip.in
@@ -117,6 +117,18 @@ The development version
     typedef QFlags<Qgis::LoadStyleFlag> LoadStyleFlags;
 
 
+    enum class StyleEntity
+      {
+      Symbol,
+      Tag,
+      ColorRamp,
+      SmartGroup,
+      TextFormat,
+      LabelSettings,
+      LegendPatchShape,
+      Symbol3D,
+    };
+
     enum class WkbType
       {
       Unknown,
